# map-machine

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  stubs.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
map_machine/: __init__.py  __main__.py  color.py  constructor.py  drawing.py  figure.py  main.py  map_configuration.py  mapcss.py  mapper.py  scheme.py  text.py  util.py  workspace.py
map_machine/doc/: __init__.py  taginfo.py
map_machine/element/: __init__.py  element.py  grid.py  way.py
map_machine/feature/: __init__.py  building.py  crater.py  direction.py  road.py  tree.py
map_machine/geometry/: __init__.py  boundary_box.py  flinger.py  vector.py
map_machine/osm/: __init__.py  osm_getter.py  osm_reader.py  tags.py
map_machine/pictogram/: __init__.py  icon.py  icon_collection.py  point.py
map_machine/scheme/: default.yml
map_machine/slippy/: __init__.py  server.py  tile.py
map_machine/ui/: __init__.py  cli.py  completion.py
tests/: __init__.py  requirements.txt  test_boundary_box.py  test_color.py  test_command_line.py  test_completion.py  test_direction.py  test_flinger.py  test_icons.py  test_label.py  test_mapcss.py  test_osm_reader.py  test_scheme.py  test_style.py  test_tag.py  test_taginfo.py  test_text.py  test_vector.py  test_ways.py  test_zoom_level.py
