[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "map-machine"
version = "0.1.9"
description = "Map Machine is a Python OpenStreetMap renderer and tile generator."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Sergey Vartanov"
email = "me@enzet.ru"

[project.urls]
Homepage = "https://github.com/potbanksoftware/map-machine"
"Issue Tracker" = "https://github.com/potbanksoftware/map-machine/issues"
"Source Code" = "https://github.com/potbanksoftware/map-machine"

[project.scripts]
map-machine = "map_machine.main:main"

[tool.whey]
base-classifiers = []
python-versions = [ "3.9", "3.10", "3.11", "3.12", "3.13",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "map_machine"
additional-files = [ "recursive-include map_machine/icons *", "include map_machine/scheme/default.yml",]

[tool.mypy]
python_version = "3.9"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dependency-dash."tests/requirements.txt"]
order = 20
include = false

[tool.dependency-dash."doc-source/requirements.txt"]
order = 30
include = false

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.dep_checker.name_mapping]
pillow = "PIL"
pyyaml = "yaml"
pycairo = "cairo"
